# protocol

./: CMakeCrossMips.txt  CMakeLists.txt  readme.txt  system.cpp
include/foundation/: ABitReader.h  ACrc16CCIT.h  AHierarchicalStateMachine.h  AMessage.h  InspiryLog.h
include/proto/: AProtoFactory.h  ATProto.h  BLEControlHandler.h  BLEControlProto.h  BaseProto.h  Com.h  InspiryBLEControl.h  Inspirydefs.h  MacSniffingProto.h  Proto.h
include/system/: audio.h  graphics.h  window.h
include/utils/: Errors.h
libfoundation/: AAtomizer.cpp  ABitReader.cpp  ABuffer.cpp  ACrc16CCIT.cpp  AHandler.cpp  AHierarchicalStateMachine.cpp  ALooper.cpp  ALooperRoster.cpp  AMessage.cpp  AString.cpp  base64.cpp  hexdump.cpp
libproto/: ATProto.cpp  BLEControlHandler.cpp  BLEControlProto.cpp  BaseProto.cpp  Com.cpp  InspiryBLEControl.cpp  MacSniffingProto.cpp  Proto.cpp
test/: CMakeLists.txt  test_aloop.cpp  test_atproto.cpp  test_ble.c  test_mutex.cpp  test_proto.cpp  test_thread.cpp
